Align env validation with deployed configuration

--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,35 @@
-MONGODB_URI=mongodb://localhost:27017/likhonsheikh
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/likhonsheikh?schema=public
-DATABASE_URL_UNPOOLED=postgresql://postgres:postgres@localhost:5432/likhonsheikh_unpooled?schema=public
-PGHOST=localhost
-PGHOST_UNPOOLED=localhost
-PGUSER=postgres
-PGDATABASE=likhonsheikh
-PGPASSWORD=postgres
-POSTGRES_URL=postgresql://postgres:postgres@localhost:5432/likhonsheikh
-POSTGRES_URL_NON_POOLING=postgresql://postgres:postgres@localhost:5432/likhonsheikh_unpooled
-POSTGRES_USER=postgres
-POSTGRES_HOST=localhost
-POSTGRES_PASSWORD=postgres
-POSTGRES_DATABASE=likhonsheikh
-POSTGRES_URL_NO_SSL=postgresql://postgres:postgres@localhost:5432/likhonsheikh?sslmode=disable
-POSTGRES_PRISMA_URL=postgresql://postgres:postgres@localhost:5432/likhonsheikh?schema=public&connection_limit=1
 NEXT_PUBLIC_STACK_PROJECT_ID=stack_project_local
 NEXT_PUBLIC_STACK_PUBLISHABLE_CLIENT_KEY=stk_pub_test_local_client_key
 STACK_SECRET_SERVER_KEY=stk_sec_test_local_server_key
+
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_local_clerk_publishable
+CLERK_SECRET_KEY=sk_test_local_clerk_secret
+
+# Neon Postgres (Production/Preview environments)
+POSTGRES_URL=postgresql://postgres:postgres@localhost:5432/likhonsheikh
+POSTGRES_PRISMA_URL=postgresql://postgres:postgres@localhost:5432/likhonsheikh?schema=public&connection_limit=1
+POSTGRES_HOST=localhost
+NEON_PROJECT_ID=project_neon_local_123456
+
+# Upstash KV/Redis configuration
 KV_URL=https://localhost:8443/kv
 KV_REST_API_URL=https://localhost:8443/kv/rest
 KV_REST_API_TOKEN=kv_test_token_local_123456
 KV_REST_API_READ_ONLY_TOKEN=kv_test_read_only_local_123456
 REDIS_URL=redis://localhost:6379
+
+# Optional legacy/local overrides
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/likhonsheikh?schema=public
+DATABASE_URL_UNPOOLED=postgresql://postgres:postgres@localhost:5432/likhonsheikh_unpooled?schema=public
+POSTGRES_URL_NON_POOLING=postgresql://postgres:postgres@localhost:5432/likhonsheikh_unpooled
+POSTGRES_URL_NO_SSL=postgresql://postgres:postgres@localhost:5432/likhonsheikh?sslmode=disable
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DATABASE=likhonsheikh
+PGHOST=localhost
+PGHOST_UNPOOLED=localhost
+PGUSER=postgres
+PGDATABASE=likhonsheikh
+PGPASSWORD=postgres
+MONGODB_URI=mongodb://localhost:27017/likhonsheikh
 BLOB_READ_WRITE_TOKEN=blob_token_local_rw_123456
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_local_clerk_publishable
-CLERK_SECRET_KEY=sk_test_local_clerk_secret
